@@ -1,36 +1,35 @@
 # Frida Java Examples
 
-This module contains an example demonstrating how to use the Frida Java bindings.
+This module contains examples demonstrating how to use the Frida Java bindings.
 
-## Version Example
+## BasicExample
 
 The `BasicExample` demonstrates:
-- Initializing and deinitializing Frida
 - Getting version information
-- Basic error handling
-
-To run the example:
-```bash
-mvn clean compile exec:java -Dexec.mainClass="nl.axelkoolhaas.examples.BasicExample"
-```
+- Device enumeration (local, remote, etc.)
+- Process enumeration
+- Resource management with try-with-resources
 
 ## Building and Running
 
-From the root directory:
+### Build from root directory:
 ```bash
-# Build everything including examples
 mvn clean package
+```
+
+### Run as executable JAR (Recommended):
+```bash
+# Native access permissions are pre-configured in the JAR
+java -jar frida-java-examples/target/frida-java-example-jar-with-dependencies.jar
 ```
 
 ### Run with Maven exec plugin:
 ```bash
 cd frida-java-examples
-mvn exec:java -Dexec.mainClass="nl.axelkoolhaas.examples.BasicExample"
+mvn exec:java -Dexec.mainClass="nl.axelkoolhaas.examples.BasicExample" \
+  -Dexec.args="--enable-native-access=ALL-UNNAMED"
 ```
 
-### Run as executable JAR:
-```bash
-# After building, run the standalone JAR
-java -jar frida-java-examples/target/frida-java-example.jar
-```
+**Note:** The executable JAR includes native access permissions in its manifest, so no additional JVM flags are needed.
+When running via Maven exec or in your IDE, you'll need to add `--enable-native-access=ALL-UNNAMED`.
 
